syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";

option java_multiple_files = true;
option java_package = "org.myddd.vertx.document.api";
option java_outer_classname = "DocumentApplicationProto";
package org.myddd.vertx.document.api;

message DocumentDTO {
    int64 id = 1;
    string mediaId = 2;
    string name = 3;
    string documentType = 4;
    string md5 = 5;
}

message NullableDocumentDTO {
  oneof kind {
    google.protobuf.NullValue null = 1;
    DocumentDTO data = 2;
  }
}


service DocumentApplication {
  rpc createDocument(DocumentDTO) returns (NullableDocumentDTO);
  rpc queryDocumentById(google.protobuf.Int64Value) returns (NullableDocumentDTO);
}